[gd_scene load_steps=15 format=3 uid="uid://6r7ih02j0ss8"]

[ext_resource type="Script" uid="uid://c23bt0tmht3hl" path="res://Enemies/Boss Dragon'sLair/dragon.gd" id="1_mkr0u"]
[ext_resource type="PackedScene" uid="uid://ddoxp44fjesk0" path="res://Bars/Health_bar.tscn" id="2_mkr0u"]
[ext_resource type="Texture2D" uid="uid://nmegeucy4jvw" path="res://Enemies/Boss Dragon'sLair/Dragon Idle.png" id="2_uo7i4"]
[ext_resource type="Texture2D" uid="uid://ddb0h5gpci82u" path="res://Enemies/Boss Dragon'sLair/Dragon Attack.png" id="3_rkrmj"]
[ext_resource type="PackedScene" uid="uid://dh5638o8nsc3t" path="res://Bars/Mana_bar.tscn" id="3_uo7i4"]
[ext_resource type="Script" uid="uid://m2rhk5o07s62" path="res://Enemies/Rat/hitbox.gd" id="4_rkrmj"]

[sub_resource type="Animation" id="Animation_uo7i4"]
resource_name = "Attack"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAttack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_3xmwr"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_wjo5c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAttack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fouig"]
_data = {
&"Attack": SubResource("Animation_uo7i4"),
&"Idle": SubResource("Animation_3xmwr"),
&"RESET": SubResource("Animation_wjo5c")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_58cm6"]
height = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e3msn"]
radius = 510.221

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uo7i4"]
radius = 22.0
height = 108.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oaqdr"]
size = Vector2(28.7362, 26.5141)

[node name="Dragon" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_mkr0u")

[node name="SpriteIdle" type="Sprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_uo7i4")
hframes = 4

[node name="SpriteAttack" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -10)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_rkrmj")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fouig")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_58cm6")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_e3msn")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
disable_mode = 2
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_uo7i4")

[node name="HealthBar" parent="." instance=ExtResource("2_mkr0u")]
offset_left = -23.0
offset_top = -32.0
offset_right = 100.0
offset_bottom = 0.0

[node name="ManaBar" parent="." instance=ExtResource("3_uo7i4")]
visible = false
offset_left = -65.0
offset_top = 42.0
offset_right = 73.0
offset_bottom = 69.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_rkrmj")
metadata/_custom_type_script = "uid://pjr6b0dw2pam"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-25, 9.53674e-07)
scale = Vector2(2.85355, 1.05604)
shape = SubResource("RectangleShape2D_oaqdr")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 5.0

[connection signal="health_changed" from="." to="HealthBar" method="_on_dragon_health_changed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
